Add toolbar support for messaging features: Introduce settings for displaying Party, Private, Beverage, Bio, Insults, Praise, Investigation, Gifts, Shady Goods, Critical Hits, Fumbles, and Inspiration buttons in both Coffee Pub and Foundry toolbars. Update language file with corresponding labels and hints for user configuration.

--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,10 @@
 
 		"partyMessageEnabled-Label": "Party Messaging Enabled",
 		"partyMessageEnabled-Hint": "Enable the Party Messaging functionality.",
+		"toolbarCoffeePubPartyMessageEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubPartyMessageEnabled-Hint": "Show Party Message button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryPartyMessageEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryPartyMessageEnabled-Hint": "Show Party Message button in the Foundry toolbar (default: false).",
 		"headingH3PartyMessage-Label": "Party Messages",
 		"headingH3PartyMessage-Hint": "Seamlessly send enriched, Markdown-enhanced messages to the entire gaming party.",
 		"partyMessageMacro-Label": "Macro Name",
@@ -19,6 +23,10 @@
 
 		"privateMessageEnabled-Label": "Private Messaging Enabled",
 		"privateMessageEnabled-Hint": "Enable the Private Messaging functionality.",
+		"toolbarCoffeePubPrivateMessageEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubPrivateMessageEnabled-Hint": "Show Private Message button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryPrivateMessageEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryPrivateMessageEnabled-Hint": "Show Private Message button in the Foundry toolbar (default: false).",
 		"headingH3PrivateMessage-Label": "Private Messages",
 		"headingH3PrivateMessage-Hint": "Need to convey a secret message to a party member or have a confidential discussion with the GM? Take co-operative strategy making and role-playing to the next level with encoded whispers or hidden instructions to select individuals.",
 		"privateMessageMacro-Label": "Macro Name",
@@ -30,6 +38,10 @@
 
 		"beverageEnabled-Label": "Beverage Breaks Enabled",
 		"beverageEnabled-Hint": "Enable the Beverage Break messaging functionality.",
+		"toolbarCoffeePubBeverageEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubBeverageEnabled-Hint": "Show Beverage Break button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryBeverageEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryBeverageEnabled-Hint": "Show Beverage Break button in the Foundry toolbar (default: false).",
 		"headingH3Beverage-Label": "Beverage Messages",
 		"headingH3Beverage-Hint": "Lets players conveniently communicate their brief absence for refreshment breaks because hydration is important. So are martinis.",
 		"cardThemeBeverage-Label": "Card Style",
@@ -41,6 +53,10 @@
 
 		"bioEnabled-Label": "Bio Breaks Enabled",
 		"bioEnabled-Hint": "Enable the Bio Break messaging functionality.",
+		"toolbarCoffeePubBioEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubBioEnabled-Hint": "Show Bio Break button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryBioEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryBioEnabled-Hint": "Show Bio Break button in the Foundry toolbar (default: false).",
 		"headingH3Bio-Label": "Bio Break Messages",
 		"headingH3Bio-Hint": "Allows players to subtly indicate that they need a short break for personal needs, such as using the bathroom.",
 		"cardThemeBio-Label": "Card Style",
@@ -52,6 +68,10 @@
 
 		"insultsEnabled-Label": "Insults Enabled",
 		"insultsEnabled-Hint": "Enable the Insults messaging functionality.",
+		"toolbarCoffeePubInsultsEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubInsultsEnabled-Hint": "Show Insults button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryInsultsEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryInsultsEnabled-Hint": "Show Insults button in the Foundry toolbar (default: false).",
 		"headingH3Insults-Label": "Random Insults",
 		"headingH3Insults-Hint": "Looking to add a light-hearted touch to your game? This unique feature injects humor and unexpected bursts of venom into gameplay.",
 		"cardThemeInsults-Label": "Card Style",
@@ -63,6 +83,10 @@
 
 		"praiseEnabled-Label": "Praise Enabled",
 		"praiseEnabled-Hint": "Enable the Praise messaging functionality.",
+		"toolbarCoffeePubPraiseEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubPraiseEnabled-Hint": "Show Praise button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryPraiseEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryPraiseEnabled-Hint": "Show Praise button in the Foundry toolbar (default: false).",
 		"headingH3Praise-Label": "Random Praise",
 		"headingH3Praise-Hint": "Use priase to spontaneously commend players for their brilliant tactics, role-playing skills, or simply spread good vibes around your virtual table.",
 		"cardThemePraise-Label": "Card Style",
@@ -77,6 +101,10 @@
 
 		"investigationEnabled-Label": "Investigations Enabled",
 		"investigationEnabled-Hint": "Enable the Investigation rolls.",
+		"toolbarCoffeePubInvestigationEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubInvestigationEnabled-Hint": "Show Investigation button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryInvestigationEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryInvestigationEnabled-Hint": "Show Investigation button in the Foundry toolbar (default: false).",
 		"headingH3Investigation-Label": "Investigations",
 		"headingH3Investigation-Hint": "Dive deeper into your adventures with this tool allowing your party to roll from investigation tables, delivering richly formatted result cards to add depth and interactivity to your game.",
 		"cardThemeInvestigation-Label": "Card Style",
@@ -92,6 +120,10 @@
 
 		"giftEnabled-Label": "Random Gifts Enabled",
 		"giftEnabled-Hint": "Enable the Random Gift rolls.",
+		"toolbarCoffeePubGiftEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubGiftEnabled-Hint": "Show Random Gifts button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryGiftEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryGiftEnabled-Hint": "Show Random Gifts button in the Foundry toolbar (default: false).",
 		"headingH3Gifts-Label": "Random Gifts",
 		"headingH3Gifts-Hint": "Have a party member celbrating something in the campaign or real life? Let them roll for a gift.",
 		"giftTable-Label": "Roll Table Name",
@@ -101,6 +133,10 @@
 
 		"shadygoodsEnabled-Label": "Shady Goods Enabled",
 		"shadygoodsEnabled-Hint": "Enable the Shady Goods rolls.",
+		"toolbarCoffeePubShadygoodsEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubShadygoodsEnabled-Hint": "Show Shady Goods button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryShadygoodsEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryShadygoodsEnabled-Hint": "Show Shady Goods button in the Foundry toolbar (default: false).",
 		"headingH3ShadyGoods-Label": "Shady Goods",
 		"headingH3ShadyGoods-Hint": "Let your party experience the thrill of uncertainty with rolls from the Shady Goods table, where every roll uncovers a range of obscure, rare, and potentially illicit items, adding a layer of unpredictability to their adventure.",
 		"shadygoodsTable-Label": "Roll Table Name",
@@ -110,6 +146,10 @@
 
 		"criticalEnabled-Label": "Critical Hits Enabled",
 		"criticalEnabled-Hint": "Enable Critical Hits rolls.",
+		"toolbarCoffeePubCriticalEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubCriticalEnabled-Hint": "Show Critical Hits button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryCriticalEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryCriticalEnabled-Hint": "Show Critical Hits button in the Foundry toolbar (default: false).",
 		"headingH3Critical-Label": "Critical Hits",
 		"headingH3Critical-Hint": "Heighten the battle excitement with the Critical Hits rolls where each roll translates to a significant blow, turning the tide of the fight unexpectedly and adding an intense, dramatic twist to your combat scenarios.",
 		"cardThemeCritical-Label": "Card Style",
@@ -121,6 +161,10 @@
 
 		"fumbleEnabled-Label": "Fumbles Enabled",
 		"fumbleEnabled-Hint": "Enable Fumble rolls.",
+		"toolbarCoffeePubFumbleEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubFumbleEnabled-Hint": "Show Fumbles button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryFumbleEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryFumbleEnabled-Hint": "Show Fumbles button in the Foundry toolbar (default: false).",
 		"headingH3Fumbles-Label": "Fumbles",
 		"headingH3Fumbles-Hint": "Introduce a dose of chaos to your battles with Fumble Rolls, a feature that adds miscalculations and mishaps to the combat, making every encounter unpredictable and thrilling.",
 		"cardThemeFumble-Label": "Card Style",
@@ -132,6 +176,10 @@
 
 		"inspirationEnabled-Label": "Inspiration Enabled",
 		"inspirationEnabled-Hint": "Enable Inspiration rolls.",
+		"toolbarCoffeePubInspirationEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubInspirationEnabled-Hint": "Show Inspiration button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryInspirationEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryInspirationEnabled-Hint": "Show Inspiration button in the Foundry toolbar (default: false).",
 		"headingH3Inspiration-Label": "Inspiration",
 		"headingH3Inspiration-Hint": "Foster moments of sudden insight and creativity, adding unexpected tactical twists and novel strategies to your gaming experience.",
 		"cardThemeInspiration-Label": "Card Style",
@@ -277,6 +325,10 @@
 
 		"injuriesEnabledGlobal-Label": "Injuries Enabled",
 		"injuriesEnabledGlobal-Hint": "Make injuries available as an additional bonus on big attacks.",
+		"toolbarCoffeePubInjuriesEnabled-Label": "Show in the Coffee Pub toolbar",
+		"toolbarCoffeePubInjuriesEnabled-Hint": "Show Injuries button in the Coffee Pub toolbar (default: true).",
+		"toolbarFoundryInjuriesEnabled-Label": "Show in the Foundry toolbar",
+		"toolbarFoundryInjuriesEnabled-Hint": "Show Injuries button in the Foundry toolbar (default: false).",
 
 		"injuryCompendium-Label": "Injury Compendium",
 		"injuryCompendium-Hint": "The name of the compendium for injuries. Hint: It has to be a journal compendium.",
