Update CHANGELOG.md and bibliosoph.js: Add 'showDiceRolls' setting for virtual dice control, reorganize settings structure, improve party message dialog layout, and ensure dice rolls respect user preferences. Filter out users without assigned characters in player list.

--- a/lang/en.json
+++ b/lang/en.json
@@ -36,8 +36,11 @@
 		"privateMessageMacro-Hint": "",
 		"cardThemePrivateMessage-Label": "Card Style",
 		"cardThemePrivateMessage-Hint": "",
-		"cardLayoutPrivateMessage-Label": "Compressed Layout",
-		"cardLayoutPrivateMessage-Hint": "",
+		"cardLayoutPrivateMessage-Label": "Compressed Chat Card Layout",
+		"cardLayoutPrivateMessage-Hint": "Shows only recipient portraits in the chat card.",
+		"privateMessageCompressedWindow-Label": "Compressed Chat Window Layout",
+		"privateMessageCompressedWindow-Hint": "Shows only recipient portraits in the chat window.",
+
 
 		"beverageEnabled-Label": "Beverage Breaks Enabled",
 		"beverageEnabled-Hint": "",
