Update investigation terminology and enhance notification system: Rename odds labels to weightings for clarity, add notification for investigation start in bibliosoph.js, and adjust narrative handling based on item findings.

--- a/lang/en.json
+++ b/lang/en.json
@@ -124,7 +124,7 @@
 		"cardThemeInvestigation-Hint": "",
 		"investigationMacro-Label": "Macro Name",
 		"investigationMacro-Hint": "",
-		"investigationOdds-Label": "Odds of Success",
+		"investigationOdds-Label": "Odds of Finding Items",
 		"investigationOdds-Hint": "",
 		"investigationDice-Label": "Upper Limit of Items",
 		"investigationDice-Hint": "",
@@ -142,28 +142,29 @@
 		"investigationCoinsMaxCopper-Hint": "Maximum copper pieces that can be found (0–max rolled).",
 		"investigationTableCommon-Label": "Common Roll Table Name",
 		"investigationTableCommon-Hint": "",
-		"investigationOddsCommon-Label": "Common Odds",
-		"investigationOddsCommon-Hint": "",
+		"investigationOddsCommon-Label": "Common Weighting",
+		"investigationOddsCommon-Hint": "Relative weight (0–1000) for Common when rolling rarity. Weights are normalized; use low values (e.g. 1) for very rare tiers.",
 
 		"investigationTableUncommon-Label": "Uncommon Roll Table Name",
 		"investigationTableUncommon-Hint": "",
-		"investigationOddsUncommon-Label": "Uncommon Odds",
-		"investigationOddsUncommon-Hint": "",
+		"investigationOddsUncommon-Label": "Uncommon Weighting",
+		"investigationOddsUncommon-Hint": "Relative weight for Uncommon when rolling rarity.",
 		
 		"investigationTableRare-Label": "Rare Roll Table Name",
 		"investigationTableRare-Hint": "",
-		"investigationOddsRare-Label": "Rare Odds",
-		"investigationOddsRare-Hint": "",
+		"investigationOddsRare-Label": "Rare Weighting",
+		"investigationOddsRare-Hint": "Relative weight for Rare when rolling rarity.",
 		
 		"investigationTableVeryRare-Label": "Very Rare Roll Table Name",
 		"investigationTableVeryRare-Hint": "",
-		"investigationOddsVeryRare-Label": "Very Rare Odds",
-		"investigationOddsVeryRare-Hint": "",
+		"investigationOddsVeryRare-Label": "Very Rare Weighting",
+		"investigationOddsVeryRare-Hint": "Relative weight for Very Rare when rolling rarity.",
 		
 		"investigationTableLegendary-Label": "Legendary Roll Table Name",
 		"investigationTableLegendary-Hint": "",
-		"investigationOddsLegendary-Label": "Legendary Odds",
-		"investigationOddsLegendary-Hint": "",
+		"investigationOddsLegendary-Label": "Legendary Weighting",
+		"investigationOddsLegendary-Hint": "Relative weight for Legendary when rolling rarity.",
+		"investigationNotificationStart": "Running investigation check...",
 		"investigationInventorySummary": "We added {items} to {character}'s inventory.",
 		"investigationInventorySummaryNoActor": "No character or token selected; items were not added to inventory.",
 		"investigationCoinsSummary": "Added {coins} to {character}'s purse.",
