Add player skill bonus setting for investigations: Introduce new configuration option for using player skill bonuses in investigations, along with corresponding labels and hints in the English language file.

--- a/lang/en.json
+++ b/lang/en.json
@@ -114,6 +114,8 @@
 
 		"investigationEnabled-Label": "Investigations Enabled",
 		"investigationEnabled-Hint": "",
+		"investigationPlayerSkill-Label": "Use Player Skill Bonus",
+		"investigationPlayerSkill-Hint": "",
 		"toolbarCoffeePubInvestigationEnabled-Label": "Show in the Coffee Pub toolbar",
 		"toolbarCoffeePubInvestigationEnabled-Hint": "",
 		"toolbarFoundryInvestigationEnabled-Label": "Show in the Foundry toolbar",
