Add Cache Functionality to Quick Encounter Tool: Implement a caching system for monster data to enhance performance during recommendations and rolls. Introduce UI elements for cache status and refresh options, update language files, and improve styles for better user experience.

--- a/lang/en.json
+++ b/lang/en.json
@@ -450,6 +450,13 @@
 		"quickEncounterConfigureEncounter-Label": "Configure Encounter",
 		"quickEncounterEnabled-Label": "Quick Encounter enabled",
 		"quickEncounterEnabled-Hint": "Show the Quick Encounter tool (CR-aware encounter builder) in the toolbar.",
+		"quickEncounterRefreshCache-Label": "Refresh cache",
+		"quickEncounterCacheStatus-Label": "Cache: {count} monsters",
+		"quickEncounterCacheStatusTitle-Hint": "Recommend and Roll use cached data for speed.",
+		"quickEncounterCacheNone-Label": "No cache — click Refresh to build",
+		"quickEncounterCacheNoneTitle-Hint": "Build a cache to make Recommend and Roll much faster.",
+		"quickEncounterCacheBuilding-Label": "Building cache…",
+		"quickEncounterCacheBuildingProgress-Label": "{current}/{total} compendiums, {count} monsters",
 		"toolbarCoffeePubQuickEncounterEnabled-Label": "Show in the Coffee Pub toolbar",
 		"toolbarCoffeePubQuickEncounterEnabled-Hint": "Quick Encounter button in the Coffee Pub toolbar (default: true).",
 		"toolbarFoundryQuickEncounterEnabled-Label": "Show in the Foundry toolbar",
