Add Max Recommendations and Variability Settings: Introduce new settings for max recommendations and variability in the quick encounter feature. Update encounter recommendation logic to utilize these settings, enhancing user control over encounter diversity. Refactor UI elements and styles for improved layout and accessibility in the encounter window.

--- a/lang/en.json
+++ b/lang/en.json
@@ -457,6 +457,8 @@
 		"quickEncounterCacheNoneTitle-Hint": "Build a cache to make Recommend and Roll much faster.",
 		"quickEncounterCacheBuilding-Label": "Building cache…",
 		"quickEncounterCacheBuildingProgress-Label": "{current}/{total} compendiums, {count} monsters",
+		"quickEncounterMaxRecommendations-Label": "Max Recommendations",
+		"quickEncounterVariability-Label": "Variability",
 		"toolbarCoffeePubQuickEncounterEnabled-Label": "Show in the Coffee Pub toolbar",
 		"toolbarCoffeePubQuickEncounterEnabled-Hint": "Quick Encounter button in the Coffee Pub toolbar (default: true).",
 		"toolbarFoundryQuickEncounterEnabled-Label": "Show in the Foundry toolbar",
