Add Detection Levels and UI Enhancements for Quick Encounters: Introduce detection levels with corresponding labels and narratives to enhance the Quick Encounter tool. Update settings to allow configuration of detection levels, and modify UI elements in the encounter window and chat card templates to display detection information clearly. Improve CSS styles for better layout and visibility of detection-related components.

--- a/lang/en.json
+++ b/lang/en.json
@@ -293,7 +293,8 @@
 		"injurySoundVolume-Hint": "",
 
 
-
+		"headingH2Encounters-Label": "Encounters",
+		"headingH2Encounters-Hint": "Set the odds of encountering a monster, configure your thresholds, and the Quick Encounter tool does the rest.",
 
 
 		"cardThemeEncounter-Label": "Card Style",
@@ -312,6 +313,9 @@
 		"quickEncounterCacheBuildingProgress-Label": "{current}/{total} compendiums, {count} monsters",
 		"quickEncounterMaxRecommendations-Label": "Max Recommendations",
 		"quickEncounterVariability-Label": "Variability",
+		"quickEncounterDetection-Label": "Detection",
+		"quickEncounterDetectionSurprised-Label": "Surprised",
+		"quickEncounterDetectionUndetected-Label": "Undetected",
 		"toolbarCoffeePubQuickEncounterEnabled-Label": "Show in the Coffee Pub toolbar",
 		"toolbarCoffeePubQuickEncounterEnabled-Hint": "Quick Encounter button in the Coffee Pub toolbar (default: true).",
 		"toolbarFoundryQuickEncounterEnabled-Label": "Show in the Foundry toolbar",
