Add Detection Roll Button and UI Enhancements: Introduce a new button for rolling detection in the Quick Encounter tool, along with corresponding localization. Update the encounter window layout to include the roll button and enhance CSS styles for improved visibility and interaction in the detection section.

--- a/lang/en.json
+++ b/lang/en.json
@@ -314,6 +314,7 @@
 		"quickEncounterMaxRecommendations-Label": "Max Recommendations",
 		"quickEncounterVariability-Label": "Variability",
 		"quickEncounterDetection-Label": "Detection",
+		"quickEncounterRequestDetectionRoll-Label": "Roll for Detection",
 		"quickEncounterDetectionSurprised-Label": "Surprised",
 		"quickEncounterDetectionUndetected-Label": "Undetected",
 		"toolbarCoffeePubQuickEncounterEnabled-Label": "Show in the Coffee Pub toolbar",
