Add Encounter Sound Settings and UI Enhancements: Introduce new settings for encounter sounds, including options for false and true encounter sounds, along with a volume control. Update the encounter window dimensions for improved layout and adjust variability settings in the UI to reflect the new range. Enhance the encounter management logic to incorporate sound settings during encounter rolls, improving user experience and interaction.

--- a/lang/en.json
+++ b/lang/en.json
@@ -320,6 +320,12 @@
 		"toolbarCoffeePubQuickEncounterEnabled-Label": "Show in the Coffee Pub toolbar",
 		"toolbarCoffeePubQuickEncounterEnabled-Hint": "Quick Encounter button in the Coffee Pub toolbar (default: true).",
 		"toolbarFoundryQuickEncounterEnabled-Label": "Show in the Foundry toolbar",
-		"toolbarFoundryQuickEncounterEnabled-Hint": "Quick Encounter button in the Foundry toolbar (default: false)."
+		"toolbarFoundryQuickEncounterEnabled-Hint": "Quick Encounter button in the Foundry toolbar (default: false).",
+		"encounterFalseSound-Label": "No Encounter Sound",
+		"encounterFalseSound-Hint": "",
+		"encounterTrueSound-Label": "Encounter Sound",
+		"encounterTrueSound-Hint": "",
+		"encounterSoundVolume-Label": "Sound Volume",
+		"encounterSoundVolume-Hint": ""
 	}
 }
