Add card theme settings for gifts and shady goods: Introduce new settings for card themes in the configuration, enhancing user customization options for both gifts and shady goods.

--- a/lang/en.json
+++ b/lang/en.json
@@ -185,6 +185,8 @@
 		"toolbarCoffeePubGiftEnabled-Hint": "",
 		"toolbarFoundryGiftEnabled-Label": "Show in the Foundry toolbar",
 		"toolbarFoundryGiftEnabled-Hint": "",
+		"cardThemeGift-Label": "Card Style",
+		"cardThemeGift-Hint": "",
 		"headingH3Gifts-Label": "Random Gifts",
 		"headingH3Gifts-Hint": "",
 		"giftTable-Label": "Roll Table Name",
@@ -198,6 +200,8 @@
 		"toolbarCoffeePubShadygoodsEnabled-Hint": "",
 		"toolbarFoundryShadygoodsEnabled-Label": "Show in the Foundry toolbar",
 		"toolbarFoundryShadygoodsEnabled-Hint": "",
+		"cardThemeShadygoods-Label": "Card Style",
+		"cardThemeShadygoods-Hint": "",
 		"headingH3ShadyGoods-Label": "Shady Goods",
 		"headingH3ShadyGoods-Hint": "",
 		"shadygoodsTable-Label": "Roll Table Name",
